@@ -5,12 +5,14 @@ import org.springframework.security.config.annotation.method.configuration.Enabl
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
+import org.springframework.security.oauth2.server.resource.authentication.JwtGrantedAuthoritiesConverter;
 
+import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Configuration
 @EnableWebSecurity
@@ -49,9 +51,12 @@ public class ResourceServerConfig extends WebSecurityConfigurerAdapter {
             if (authorities == null)
                 authorities = Collections.emptyList();
 
-            return authorities.stream()
-                    .map(SimpleGrantedAuthority::new)
-                    .collect(Collectors.toList());
+            final JwtGrantedAuthoritiesConverter scopesJwtGrantedAuthoritiesConverter = new JwtGrantedAuthoritiesConverter();
+            final Collection<GrantedAuthority> grantedAuthorities = scopesJwtGrantedAuthoritiesConverter.convert(jwt);
+
+            grantedAuthorities.addAll(authorities.stream()
+                    .map(SimpleGrantedAuthority::new).toList());
+            return grantedAuthorities;
         });
 
         return jwtAuthenticationConverter;
